# Point-Cloud-Ground-Segmentation

./: CMakeLists.txt  README.md  package.xml
launch/: ground_segment.launch
src/: ground_segmentation_node.py  new_frame.py  pcd_visualize.py
